--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,17 +35,19 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation project(path: ':core')
+    implementation project(path: ':core-ui')
     implementation project(path: ':core-network-api')
     implementation project(path: ':core-repository-api')
     implementation project(path: ':core-network-impl')
     implementation project(path: ':core-repository-impl')
     implementation project(path: ':feauture-movies-impl')
     implementation project(path: ':feature-movie-details')
+
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
