Changes: 1) Add Favorites Feature 2) Refactor ViewHolder 3) Add Dao and local data source api 4) start refactoring navigation

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,6 @@ include ':core'
 include ':core-repository-api'
 include ':core-repository-impl'
 include ':feature-movie-details'
+include ':core-local-api'
+include ':core-local-impl'
+include ':feature-favorites'
