--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,24 @@ dependencies {
     implementation project(path: ':core-repository-impl')
     implementation project(path: ':feauture-movies-impl')
     implementation project(path: ':feature-movie-details')
+    implementation project(path: ':core-local-api')
+    implementation project(path: ':core-local-impl')
+    implementation project(path: ':feature-favorites')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //Navigation
+    def nav_version = "2.5.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Dagger 2
     implementation 'com.google.dagger:dagger:2.44.2'
